--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/task.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/task.css
@@ -1,3 +1,17 @@
+.congrats-image-container {
+        display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+.congrats-image-container img{
+width: 80px;
+   
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body {
     background: #fafafa;
     font-family: open-sans !important;
@@ -297,12 +311,7 @@ h1.large {
     left: 20%;
     background: #3a9de2;
 }*/
-.congrats-image-container img{
-    position: relative;
-    top: 25px;
-    left: 95px;
-    width:88px;
-}
+
 .congrats h3{
     color:#3a9de2;
 }
@@ -342,9 +351,7 @@ h1.large {
     .congrats-hr-right{
         margin-left: 152px;
         }
-    .congrats-image-container img{
-        left:70px;
-        }
+    
     .canvas-container{
         margin-left: -30px
         }
@@ -383,9 +390,7 @@ h1.large {
     }
 }
 @media only screen and (min-width : 768px) and (max-width:1024px) {
-    .congrats-image-container img {
-        left: 420px;
-    }
+    
     .toggleTaskIcon{
         left: 48%;
     }
@@ -400,12 +405,8 @@ h1.large {
     }
 }
 @media only screen and (min-width : 1025px) and (max-width: 1365px) {
-    .congrats-image-container img {
-        left: 490px;
-    }
-    .congrats-text-container{
-        padding-left: 155px;
-    }
+    
+    
     .toggleTaskIcon{
         left: 50%;
     }
@@ -420,12 +421,8 @@ h1.large {
     }
 }
 @media only screen and (min-width : 1366px) {
-    .congrats-image-container img {
-        left: 590px;
-    }
-    .congrats-text-container{
-        padding-left: 160px;
-      }
+    
+    
     .congrats-hr-left {
          margin-left: 175px;
     }
