--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/admin/admin.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/admin/admin.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container-fluid hm-gradient" ng-if="!success" id="admin">
 	<div class="row">
-		<div class="col-md-6">
+		<div>
 			<div class="form-white">
 				<div class="form-body">
 					<h3 class="text-center default-text py-3" style="color:#f31813; font-weight:900;"><i class="fa fa-user" >
@@ -24,7 +24,7 @@
 								<span ng-show="adminForm.password.$error.required">Password is required.</span>
 							</span>
 						</div>
-						
+
 						<button ng-disabled="dataLoading" type="submit" class="btn btn-default btn-lg custom-buttom active">Submit 
 							<i ng-if= "dataLoading" class="fa fa-spinner fa-spin"></i>
 						</button>
@@ -36,10 +36,4 @@
 		
 	</div>
 	
-</div>
-<div class="container" ng-if="success" id="admin-questions">
-	<div class="container-fluid bg-1 text-center">
-		<h3 class="margin">Welcome Admin!</h3>
-	</div>
-<div class="container" ng-include="'/apps/hha/dmxfla/components/content/admin/questions.html'"></div>
 </div>
