--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/signup/signup.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/signup/signup.html
@@ -189,10 +189,18 @@
 					</span>
 				</div>
 				<div class="row button-group padding-top padding-bottom">
-					<div class="col-xs-12 col-sm-12 padding-top">
-						<button ng-class="{active: state.current.name === 'signup'}" class="btn btn-default btn-lg custom-buttom" style="">Sign Up</button>
+
+					<div class="col-xs-6 col-sm-6" style="margin-left: -15px;">
+						<button ng-class="{active: state.current.name === 'signup'}"  class="btn btn-default btn-lg custom-buttom">SIGNUP
+						<i ng-if= "loginLoading" class="fa fa-spinner fa-spin"></i>
+						</button>
+						
+					</div>
+					<div class="col-xs-6 col-sm-6">
+						<button ng-class="{active: state.current.name === 'login'}" ui-sref="login" class="btn btn-default btn-lg custom-buttom">LOGIN</button>		
 					</div>
 					
+
 				</div>
 				
 			</form>
